# adobe-1a-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  USAGE.md  build_docker.sh  docker-compose.yml  test_docker_simple.sh
src/: common_types.h  heading_classifier.cpp  heading_classifier.hpp  main.cpp  pdf_processor.cpp  pdf_processor.hpp  text_corrector.cpp  text_corrector.hpp  utils.cpp  utils.hpp  yolo_inference.cpp  yolo_inference.h
